--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -36,5 +36,6 @@
   </nav>
 
   <p class="text-muted text-center">2019 OS Design Guide</p>
+  <p class="text-muted text-center">Contact Eddie Paulino at epaulin0@chicagobooth.edu to learn how you can support the development of this open source community</p>
 </footer>
 <!-- Footer -->
