--- a/app/views/text_component_templates/new_form.html.erb
+++ b/app/views/text_component_templates/new_form.html.erb
@@ -32,7 +32,7 @@
       Content
     </label>
 
-    <textarea id="content" name="content" class="ckeditor" rows="10" value="<%= @text_component.try(:content) %>"></textarea>
+    <textarea id="content" name="content" class="ckeditor" rows="10" value="<%= sanitize @text_component.try(:content) %>"></textarea>
   </div>
   
   <!--input for guide_id -->
