--- a/app/views/text_component_templates/edit_form.html.erb
+++ b/app/views/text_component_templates/edit_form.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag Ckeditor.cdn_url %>
 <!-- Validation failure messages -->
 <% if @text_component.errors.any? %>
   <% @text_component.errors.full_messages.each do |message| %>
@@ -31,7 +32,7 @@
       Header
     </label>
 
-    <input type="text" id="header" name="header" class="form-control" value="<%= @text_component.try(:header) %>">
+    <input type="text" id="header" name="header" class="form-control" value=<%= @text_component.header %>>
   </div>
   
   <div class="form-group">
@@ -39,7 +40,7 @@
       Content
     </label>
 
-    <textarea id="content" name="content" class="ckeditor" rows="10" value="<%= @text_component.try(:content) %>"></textarea>
+    <textarea id="content" name="content" class="ckeditor" rows="10" value=<%= raw @text_component.content %>></textarea>
   </div>
   
   <button class="btn btn-block btn-outline-secondary">
