--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -57,7 +57,7 @@
       <% end %>
       <a href="#/lessons_learned" class="nav-link">
         <i class="fas fa-newspaper"></i>
-        Lessons Learned Blog</a>
+        Community Boards</a>
 <% unless current_page?("/")%>
       <li class="nav-item">
         <form class="form-inline my-2 my-lg-0" action="/guides">
