--- a/app/views/guide_templates/show.html.erb
+++ b/app/views/guide_templates/show.html.erb
@@ -26,21 +26,21 @@
           <% if current_user == nil %>
           <% else %>
             <!--TRACKING LINKS-->
-            <% if TrackedGuide.find_by({ :user_id => current_user.id, :guide_id => @guide.id }) == nil %>
-              <form action="/create_tracked_guide" method="post">
+            <% if Star.find_by({ :user_id => current_user.id, :guide_id => @guide.id }) == nil %>
+              <form action="/create_star" method="post">
                 <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= @guide.id %>">
                 <input type="hidden" id="user_id" name="user_id" class="form-control" value="<%= current_user.id %>">
                 <button type="submit" class="btn btn-link">
-                  <i class="fas fa-eye"></i>
-                  Track Guide
+                  <i class="far fa-star fa-2x"></i> <span class="badge badge-primary badge-pill"> <%= Star.where(:guide_id => @guide.id).count %></span>
+                  
                 </button>
               </form>
             <% else %>
-              <form action="/delete_tracked_guide/<%= TrackedGuide.find_by({ :user_id => current_user.id, :guide_id => @guide.id }).id %>">
+              <form action="/delete_star/<%= Star.find_by({ :user_id => current_user.id, :guide_id => @guide.id }).id %>">
                 <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= @guide.id %>">
                 <button type="submit" class="btn btn-link">
-                  <i class="fas fa-eye-slash"></i>
-                  Untrack Guide
+                  <i class="fas fa-star fa-2x"></i> <span class="badge badge-primary badge-pill"> <%= Star.where(:guide_id => @guide.id).count %></span>
+                 
                 </button>
               </form>
             <% end %>
@@ -207,7 +207,7 @@
                         <div class="modal-dialog modal-dialog-centered" role="document">
                           <div class="modal-content">
                             <div class="modal-header">
-                              <h5 class="modal-title" id="TabEditModalLongTitle<%= tab.id %>">Edit tab Descriptors</h5>
+                              <h5 class="modal-title" id="TabEditModalLongTitle<%= tab.id %>">Edit tab title</h5>
                               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                               </button>
@@ -225,7 +225,7 @@
                             </div>
                             <div class="modal-footer">
                               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                              <button type="submit" form="TabEditForm<%= tab.id %>" class="btn btn-primary">Update the <%= tab.title %> tab descriptors</button>
+                              <button type="submit" form="TabEditForm<%= tab.id %>" class="btn btn-primary">Update the <%= tab.title %> tab title</button>
                               <% if ["Design Summary","Discussions"].include? tab.title %>
                               <% else %>
                                 <a href="#" id="show_more">More</a>
@@ -378,139 +378,22 @@
 
 
                     <% TextComponent.where(tab_id: tab.id).each do |text_component| %>
-                      <h3><%= text_component.header %></h3>
                       <p><%= raw text_component.content %></p>
                       <% if current_user == nil %>
                       <% else %>
                         <form action="/text_components/<%= text_component.id %>/edit">
                           <input type="hidden" name="tab_id" id="tab_id" class="form-control" value="<%= text_component.tab_id %>">
                           <input type="hidden" name="guide_id" id="guide_id" class="form-control" value="<%= @guide.id %>">
-                          <button type="submit" class="btn btn-link">Edit Text Component</button>
+                          <button type="submit" class="btn btn-primary">
+                            <i class="far fa-edit"></i>
+                            Edit Content</button>
                         </form>
                       <% end %>
                       <hr>
                     <% end %>
-                    <% Resource.where(tab_id: tab.id).each do |resource| %>
-                      <h3><%= resource.category %></h3>
-                      <h4><%= resource.created_at %></h4>
 
-                      <a href="<%= resource.resource %>"><img src="<%= resource.resource %>" class="img-fluid" style="max-height:500px">
-                      </a>
-                      <% if current_user == nil %>
-                      <% else %>
-                        <form action="/resources/<%= resource.id %>/edit">
-                          <input type="hidden" name="tab_id" id="tab_id" class="form-control" value="<%= resource.tab_id %>">
-                          <input type="hidden" name="guide_id" id="guide_id" class="form-control" value="<%= @guide.id %>">
-                          <button type="submit" class="btn btn-link">Edit Resource</button>
-                        </form>
-                      <% end %>
-                      <hr>
-                    <% end %>
-                    <% YoutubeVideo.where(tab_id: tab.id).each do |youtube_video| %>
-                      <h3><%= youtube_video.description %></h3>
-                      <div class="row">
-                        <div class="col-sm-8">
-                          <div class="embed-responsive embed-responsive-16by9">
+                   
 
-                            <iframe class="embed-responsive-item" src="<%= youtube_video.url_link.gsub(".com/watch?v=",".com/embed/") %>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                          </div>
-                        </div>
-                      </div>
-                      <% if current_user == nil %>
-                      <% else %>
-
-                        <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-link" data-toggle="modal" data-target="#YoutubeVideoEditModalCenter">
-                          <i class="far fa-edit"></i>
-                          Edit YoutubeVideo
-                        </button>
-                        <!-- edit youtube Modal -->
-                        <div class="modal fade" id="YoutubeVideoEditModalCenter" tabindex="-1" role="dialog" aria-labelledby="YoutubeVideoEditModalCenterTitle" aria-hidden="true">
-                          <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <h5 class="modal-title" id="YoutubeVideoEditModalLongTitle">Edit Youtube video descriptors</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                  <span aria-hidden="true">&times;</span>
-                                </button>
-                              </div>
-                              <div class="modal-body">
-                                <form action="/update_youtube_video" method="post" id="YoutubeVideoForm">
-                                  <div class="form-group">
-                                    <label for="url_link" class="col-form-label">URL link</label>
-                                    <input type="text" class="form-control" name="url_link" id="url_link" value="<%= youtube_video.try(:url_link) %>">
-
-                                    <label for="description" class="col-form-label">Description</label>
-                                    <input type="text" class="form-control" name="description" id="description" value="<%= youtube_video.try(:description) %>">
-
-                                    <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= @guide.id %>">
-                                    <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= youtube_video.try(:tab_id) %>">
-                                  </div>
-
-                                </form>
-                              </div>
-                              <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="submit" form="YoutubeVideoForm" class="btn btn-primary">Update Youtube video descriptors</button>
-                                <a href="#" id="show_more">More</a>
-
-                                <div id="more" class="hidden">
-                                  <a href="/delete_youtube_video/<%= youtube_video.id %>" data-confirm="Are you sure?">
-                                    Delete youtube_video
-                                  </a>
-                                </div>
-
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <!--END edit youtube MODAL-->
-                      <% end %>
-                      <hr>
-                    <% end %>
-
-
-                    <!--DROPDOWN BUTTONS TO ADD CONTENT-->
-                    <% if current_user == nil %>
-                    <% else %>
-                      <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          <i class="fas fa-plus"></i>
-                          Add Content</button>
-                        <div class="btn-group" role="group">
-                          <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                            <form action="/text_components/new">
-                              <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= tab.id %>">
-                              <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= @guide.id %>">
-                              <button type="submit" class="dropdown-item">
-                                <i class="fas fa-font"></i>
-                                Add a text component
-                              </button>
-                            </form>
-
-                            <form action="/resources/new">
-                              <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= tab.id %>">
-                              <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= @guide.id %>">
-                              <button type="submit" class="dropdown-item">
-                                <i class="fas fa-file"></i>
-                                Add a resource
-                              </button>
-                            </form>
-                            <form action="/youtube_videos/new">
-                              <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= tab.id %>">
-                              <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= @guide.id %>">
-                              <button type="submit" class="dropdown-item">
-                                <i class="fab fa-youtube"></i>
-                                Add a Youtube video
-                              </button>
-                            </form>
-                          </div>
-                        </div>
-                      </div>
-                      <hr>
-                    <% end %>
-
-                    <!--               END TO DISCUSSION TAB LOGIC-->
                   <% end %>
                   <!--END DROPDOWN BUTTONS-->
 
