--- a/app/views/text_component_templates/edit_form.html.erb
+++ b/app/views/text_component_templates/edit_form.html.erb
@@ -8,9 +8,9 @@
   <% end %>
 <% end %>
 
-<h1>
-  Edit text component #<%= @text_component.id %>
-</h1>
+<h3>
+  Edit Content for the "<%= Guide.find_by(:id => params.fetch("guide_id")).title %>" guide, "<%= Tab.find_by(:id => params.fetch("tab_id")).title %>" tab.
+</h3>
 
 <hr>
 <div class="container">
@@ -25,22 +25,12 @@
     <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= params.fetch("tab_id") %>">
   </div>
 
-
-  <!-- Label and input for header -->
-  <div class="form-group">
-    <label for="header">
-      Header
-    </label>
-
-    <input type="text" id="header" name="header" class="form-control" value=<%= @text_component.header %>>
-  </div>
-  
   <div class="form-group">
     <label for="content">
       Content
     </label>
 
-    <textarea id="content" name="content" class="ckeditor" rows="10" value=<%= raw @text_component.content %>></textarea>
+    <textarea id="content" name="content" class="ckeditor" rows="10" value=<%= sanitize @text_component.content %>></textarea>
   </div>
   
   <button class="btn btn-block btn-outline-secondary">
@@ -50,10 +40,7 @@
 </div>
 
 <hr>
-<a href="/delete_text_component/<%= @text_component.id %>" data-confirm="Are you sure?">
-  Delete text component
-</a>
-<div></div>
+
 <a href="/guides/<%= params.fetch("guide_id") %>">
   Go back
 </a>
